Show  bug report action in sidebar menu

It is already shown in other modes.
BUG:426747